updated hero image

--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
 
         <!-- image -->
         <div class="md:w-1/2">
-          <img src="./images/hero-image.jpg" alt="" class="rounded-3xl" />
+          <!-- <img src="./images/hero-image.jpg" alt="" class="rounded-3xl" /> -->
+          <!-- <img src="./images/join.png" alt="" class="rounded-3xl" /> -->
+          <img src="./images/join.gif" alt="" class="rounded-3xl" />
+          <!-- <video src="./images/join.mp4" autoplay muted loop class="w-full h-full object-cover rounded-3xl"></video> -->
+          
         </div>
       </div>
     </section>
