--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <!-- navbar -->
-    <nav class="container w-10/12 mx-auto p-4 mt-4 bg-darkBlue border-orange-600 rounded-md pt-4 fixed top-0 left-5 right-5">
+    <nav class="container w-10/12 mx-auto p-2 mt-5 bg-darkBlue border-orange-600 rounded-md fixed top-0 left-5 right-5">
 
       <!-- flex container -->
       <div class="flex items-center justify-between">
@@ -28,7 +28,7 @@
 
         <!-- menu item -->
         <div
-          class="hidden items-center justify-center text-white space-x-6 px-20 mdd:flex md:text-sm md:font-normal trans"
+          class="hidden items-center justify-center text-white space-x-6 px-20 mdd:flex md:text-lg md:font-normal trans"
         >
           <a href="#" class="hover:text-orange-600 trans">Roadmaps</a>
           <a href="#" class="hover:text-orange-600 trans">About Us</a>
@@ -90,14 +90,22 @@
       </div>
     </nav>
 
+    <!-- Big Name --> 
+    <!-- kharap dekhay  -->
+<!--     
+    <div class="text-4xl font-serif font-extrabold flex justify-center items-center m-20">
+      <h1>Competitive Programming Camp City University</h1>
+    </div> -->
+
+
     <!-- hero sec -->
-    <section class="mt-28 w-10/12 mx-auto" id="hero">
+    <section class="mt-24 w-10/12 mx-auto" id="hero">
       <!-- flex container -->
       <div
         class="container flex flex-col-reverse items-center px-4 mx-auto mt-10 space-y-0 md:space-y-0 md:flex-row"
       >
         <!-- left   -->
-        <div class="flex flex-col mb-32 space-y-12 md:w-1/2">
+        <div class="flex flex-col mb-8 space-y-12 md:w-1/2">
           <h1
             class="max-w-md text-3xl font-bold text-center md:text-6xl md:text-left"
           >
@@ -133,7 +141,7 @@
 
     <section
       id="features"
-      class="bg-gray-100 w-10/12 mx-auto rounded-3xl items-center md:my-14"
+      class="bg-gray-100 w-10/12 mx-auto rounded-3xl items-center md:my-8"
     >
       <!-- flex container -->
       <div
@@ -246,9 +254,9 @@
     </section>
 
     <!-- testimonials -->
-    <section class="testimonials py-5">
+    <section class="testimonials">
       <!-- heading -->
-      <h2 class="text-4xl font-bold text-center mb-[100px]">Testimonials</h2>
+      <h2 class="text-4xl font-bold text-center mt-[20px] mb-[54px]">Testimonials</h2>
 
       <!-- container to heading and testimonial blocks -->
       <div class="max-w-6xl px-5 mx-auto text-center">
