--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <div class="flex flex-col space-y-3 text-white">
             <a href="#" class="hover:text-brightRed trans">About Us</a>
             <a href="#" class="hover:text-brightRed trans">Contact</a>
-            <a href="#" class="hover:text-brightRed trans">Photos & Videos</a>
+            <a href="#" class="hover:text-brightRed trans">Media</a>
             <a href="#" class="hover:text-brightRed trans">Policy</a>
           </div>
         </div>
