--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="mdd:hidden">
         <div
           id="menu"
-          class="absolute hidden trans border rounded-lg top-full flex flex-col bg-white px-5 right-0 py-1 mt-2"
+          class="absolute hidden trans border rounded-lg top-full flex-col bg-white px-5 right-0 py-1 mt-2"
         >
           <a
             href="#"
@@ -90,14 +90,6 @@
       </div>
     </nav>
 
-    <!-- Big Name --> 
-    <!-- kharap dekhay  -->
-<!--     
-    <div class="text-4xl font-serif font-extrabold flex justify-center items-center m-20">
-      <h1>Competitive Programming Camp City University</h1>
-    </div> -->
-
-
     <!-- hero sec -->
     <section class="mt-24 w-10/12 mx-auto" id="hero">
       <!-- flex container -->
@@ -107,13 +99,11 @@
         <!-- left   -->
         <div class="flex flex-col mb-8 space-y-12 md:w-1/2">
           <h1
-            class="max-w-md text-3xl font-bold text-center md:text-6xl md:text-left"
-          >
+            class="max-w-md text-3xl font-bold text-center md:text-6xl md:text-left">
             Join the journey of programming, learn & grow with us!
           </h1>
           <p
-            class="max-w-md text-lg text-center text-darkGrayishBlue md:text-left"
-          >
+            class="max-w-md text-lg text-center text-darkGrayishBlue md:text-left">
             Are you passionate about coding and want to learn new things? Do you
             want to collaborate with like-minded people and grow your skills?
             Join our programming club and be a part of a community that values
@@ -148,10 +138,9 @@
         class="container flex flex-col p-3 md:px-4 md:p-4 mx-auto space-y-12 md:space-y-0 md:flex-row"
       >
         <!-- what now -->
-        <div class="flex flex-col space-y-12 md:w-1/2">
+        <div class="flex flex-col justify-center space-y-12 md:w-1/2">
           <h2
-            class="max-w-md text-3xl md:text-6xl font-bold text-center md:text-left"
-          >
+            class="max-w-md text-3xl md:text-6xl font-bold text-center md:text-left">
             How to join?
           </h2>
           <p class="max-w-sm text-center text-blue-950 md:text-left">
@@ -386,7 +375,7 @@
         </div>
 
         <!-- list container -->
-        <div class="flex justify-center items-center space-x-32">
+        <div class="flex justify-center items-center text-center space-x-32">
           <div class="flex flex-col space-y-3 text-white">
             <a href="#" class="hover:text-brightRed trans">Home</a>
             <a href="#" class="hover:text-brightRed trans">Roadmaps</a>
